--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -43,6 +43,7 @@ set_real_ip_from 107.174.146.25;
 set_real_ip_from 107.175.93.157;
 set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.11.111;
+set_real_ip_from 107.189.1.16;
 set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.12.3;
@@ -125,7 +126,6 @@ set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
-set_real_ip_from 141.98.11.62;
 set_real_ip_from 143.20.64.235;
 set_real_ip_from 144.126.133.74;
 set_real_ip_from 144.31.188.82;
@@ -145,6 +145,7 @@ set_real_ip_from 152.53.53.243;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.53.58.161;
+set_real_ip_from 157.180.46.73;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 160.187.148.71;
 set_real_ip_from 161.129.68.162;
@@ -194,7 +195,6 @@ set_real_ip_from 173.224.219.44;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
-set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.134.4;
 set_real_ip_from 176.65.148.133;
@@ -223,6 +223,7 @@ set_real_ip_from 178.20.55.182;
 set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
+set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.133.50;
@@ -273,7 +274,6 @@ set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.129.62.64;
 set_real_ip_from 185.130.47.58;
-set_real_ip_from 185.132.53.107;
 set_real_ip_from 185.132.53.150;
 set_real_ip_from 185.132.53.188;
 set_real_ip_from 185.138.88.25;
@@ -483,7 +483,6 @@ set_real_ip_from 185.40.4.64;
 set_real_ip_from 185.40.4.92;
 set_real_ip_from 185.42.170.203;
 set_real_ip_from 185.56.171.94;
-set_real_ip_from 185.62.58.36;
 set_real_ip_from 185.67.82.114;
 set_real_ip_from 185.82.219.109;
 set_real_ip_from 188.239.191.25;
@@ -940,7 +939,6 @@ set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
-set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
@@ -1158,14 +1156,13 @@ set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:1dc0:caff:f4::bad5;
 set_real_ip_from 2a00:74a0:e000:1003::114;
-set_real_ip_from 2a00:7b80:452:2000::36;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
 set_real_ip_from 2a01:270:9847::1;
+set_real_ip_from 2a01:4f9:c012:3776::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
-set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1257,7 +1254,6 @@ set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a07:e042:1:181::1;
 set_real_ip_from 2a07:e042:1:182::1;
 set_real_ip_from 2a09:2dc2:0:5084::;
-set_real_ip_from 2a09:2dc2:0:588a::;
 set_real_ip_from 2a09:2dc2:0:5963::;
 set_real_ip_from 2a09:61c0::20;
 set_real_ip_from 2a09:61c0::21;
@@ -1451,7 +1447,6 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:29;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:38;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:64;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
-set_real_ip_from 2a0e:97c0:3e3:1bb::3;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b02b:1337:3;
@@ -1471,6 +1466,7 @@ set_real_ip_from 2a0e:bfc0:0:14::24a8;
 set_real_ip_from 2a0e:bfc0:0:2::8a62;
 set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
+set_real_ip_from 2a0e:bfc7::216:3cff:fe6f:c4ca;
 set_real_ip_from 2a0e:bfc7::216:3cff:fe98:45cb;
 set_real_ip_from 2a0e:bfc7::216:3cff:fece:19ec;
 set_real_ip_from 2a0e:e701:1198::1;
@@ -1560,12 +1556,10 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:53;
 set_real_ip_from 2a12:a800:2:1:45:80:158:75;
 set_real_ip_from 2a12:a800:2:1:45:80:158:93;
 set_real_ip_from 2a12:a800:8:1:45:94:31:68;
-set_real_ip_from 2a12:a800:9:1:45:83:31:79;
 set_real_ip_from 2a14:1ec7:1000:a633::1;
 set_real_ip_from 2a14:7583:f607::;
 set_real_ip_from 2a14:c380:280:77::a;
 set_real_ip_from 2a14:c380:50:20::a;
-set_real_ip_from 2a14:c380:50:62::a;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.133.0.235;
@@ -1575,7 +1569,6 @@ set_real_ip_from 31.40.204.186;
 set_real_ip_from 31.40.204.206;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
-set_real_ip_from 37.114.50.115;
 set_real_ip_from 37.114.50.124;
 set_real_ip_from 37.114.50.142;
 set_real_ip_from 37.114.50.18;
@@ -1591,7 +1584,6 @@ set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
@@ -1617,7 +1609,6 @@ set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.73.14;
 set_real_ip_from 45.133.73.63;
 set_real_ip_from 45.133.74.53;
-set_real_ip_from 45.134.173.203;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.201.26;
 set_real_ip_from 45.137.201.31;
@@ -1646,7 +1637,6 @@ set_real_ip_from 45.141.215.200;
 set_real_ip_from 45.141.215.238;
 set_real_ip_from 45.141.215.28;
 set_real_ip_from 45.141.215.40;
-set_real_ip_from 45.141.215.45;
 set_real_ip_from 45.141.215.56;
 set_real_ip_from 45.141.215.61;
 set_real_ip_from 45.141.215.62;
@@ -1677,7 +1667,6 @@ set_real_ip_from 45.80.158.75;
 set_real_ip_from 45.80.158.93;
 set_real_ip_from 45.80.208.224;
 set_real_ip_from 45.83.104.137;
-set_real_ip_from 45.83.31.79;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.128;
 set_real_ip_from 45.84.107.17;
@@ -1700,6 +1689,7 @@ set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.156.101;
 set_real_ip_from 45.9.156.105;
 set_real_ip_from 45.9.156.161;
+set_real_ip_from 45.9.156.22;
 set_real_ip_from 45.9.168.192;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.104;
