--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -145,7 +145,6 @@ allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.53.58.161;
-allow 157.180.46.73;
 allow 160.119.249.240;
 allow 160.187.148.71;
 allow 161.129.68.162;
@@ -195,6 +194,7 @@ allow 173.224.219.44;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
+allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.148.133;
@@ -870,7 +870,6 @@ allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
-allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -878,7 +877,6 @@ allow 23.151.8.8;
 allow 23.155.8.104;
 allow 23.177.185.98;
 allow 23.184.48.78;
-allow 23.190.216.8;
 allow 23.191.200.10;
 allow 23.191.200.11;
 allow 23.191.200.12;
@@ -898,7 +896,6 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
@@ -945,13 +942,11 @@ allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
 allow 2602:f915:f:3b43::1;
 allow 2602:fa59:5:915::1;
-allow 2602:fa86:b1:0:7c26:daab:e286:3c5d;
 allow 2602:fa8a:3:a::a;
 allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1159,10 +1154,10 @@ allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
-allow 2a01:4f9:c012:3776::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1224,8 +1219,8 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9b85:500::58;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:112:31::1;
+allow 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
@@ -1566,7 +1561,6 @@ allow 31.133.0.235;
 allow 31.184.236.104;
 allow 31.220.75.237;
 allow 31.40.204.186;
-allow 31.40.204.206;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1809,9 +1803,9 @@ allow 82.221.131.71;
 allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.29.128.145;
+allow 82.96.141.198;
 allow 83.217.9.73;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.224.201;
