--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -131,7 +131,6 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
-deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -436,6 +435,7 @@ deny 2a06:1700:1:108::b829:eee2;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
+deny 2a06:7e00:406:c400:2c9:b0ff:fe17:5cca;
 deny 2a06:7e00:406:c400:2f2:5ff:fe84:adc7;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
@@ -683,7 +683,6 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
-deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:114;
 deny 2a12:a800:11:1:124:198:131:191;
@@ -748,6 +747,7 @@ deny 2a12:a800:2:1:45:80:158:53;
 deny 2a12:a800:2:1:45:80:158:75;
 deny 2a12:a800:2:1:45:80:158:93;
 deny 2a12:a800:8:1:45:94:31:68;
+deny 2a12:a800:9:1:45:83:31:79;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
 deny 2a14:c380:280:77::a;
