Update lists at 20251031-0301

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -42,7 +42,6 @@ deny 107.174.146.25;
 deny 107.175.93.157;
 deny 107.189.10.175;
 deny 107.189.11.111;
-deny 107.189.1.16;
 deny 107.189.1.160;
 deny 107.189.1.175;
 deny 107.189.12.3;
@@ -341,7 +340,6 @@ deny 185.220.101.140;
 deny 185.220.101.143;
 deny 185.220.101.144;
 deny 185.220.101.145;
-deny 185.220.101.146;
 deny 185.220.101.147;
 deny 185.220.101.149;
 deny 185.220.101.15;
@@ -900,6 +898,7 @@ deny 23.191.200.26;
 deny 23.191.200.27;
 deny 23.191.200.28;
 deny 23.191.200.29;
+deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
@@ -937,6 +936,7 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1211,6 +1211,7 @@ deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1291,7 +1292,6 @@ deny 2a0b:f4c2:1::140;
 deny 2a0b:f4c2:1::143;
 deny 2a0b:f4c2:1::144;
 deny 2a0b:f4c2:1::145;
-deny 2a0b:f4c2:1::146;
 deny 2a0b:f4c2:1::147;
 deny 2a0b:f4c2:1::149;
 deny 2a0b:f4c2:1::152;
@@ -1586,6 +1586,7 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
@@ -1719,6 +1720,7 @@ deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
