--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -42,7 +42,6 @@ allow 107.174.146.25;
 allow 107.175.93.157;
 allow 107.189.10.175;
 allow 107.189.11.111;
-allow 107.189.1.16;
 allow 107.189.1.160;
 allow 107.189.1.175;
 allow 107.189.12.3;
@@ -341,7 +340,6 @@ allow 185.220.101.140;
 allow 185.220.101.143;
 allow 185.220.101.144;
 allow 185.220.101.145;
-allow 185.220.101.146;
 allow 185.220.101.147;
 allow 185.220.101.149;
 allow 185.220.101.15;
@@ -900,6 +898,7 @@ allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
+allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
@@ -937,6 +936,7 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1211,6 +1211,7 @@ allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1291,7 +1292,6 @@ allow 2a0b:f4c2:1::140;
 allow 2a0b:f4c2:1::143;
 allow 2a0b:f4c2:1::144;
 allow 2a0b:f4c2:1::145;
-allow 2a0b:f4c2:1::146;
 allow 2a0b:f4c2:1::147;
 allow 2a0b:f4c2:1::149;
 allow 2a0b:f4c2:1::152;
@@ -1586,6 +1586,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1719,6 +1720,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
