--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -130,6 +130,7 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -403,6 +404,7 @@ deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -483,7 +485,6 @@ deny 2a0b:f4c2:1::140;
 deny 2a0b:f4c2:1::143;
 deny 2a0b:f4c2:1::144;
 deny 2a0b:f4c2:1::145;
-deny 2a0b:f4c2:1::146;
 deny 2a0b:f4c2:1::147;
 deny 2a0b:f4c2:1::149;
 deny 2a0b:f4c2:1::152;
