--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -42,7 +42,6 @@ set_real_ip_from 107.174.146.25;
 set_real_ip_from 107.175.93.157;
 set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.11.111;
-set_real_ip_from 107.189.1.16;
 set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.12.3;
@@ -341,7 +340,6 @@ set_real_ip_from 185.220.101.140;
 set_real_ip_from 185.220.101.143;
 set_real_ip_from 185.220.101.144;
 set_real_ip_from 185.220.101.145;
-set_real_ip_from 185.220.101.146;
 set_real_ip_from 185.220.101.147;
 set_real_ip_from 185.220.101.149;
 set_real_ip_from 185.220.101.15;
@@ -900,6 +898,7 @@ set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
@@ -937,6 +936,7 @@ set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
+set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
@@ -1211,6 +1211,7 @@ set_real_ip_from 2a04:52c0:102:46e0::1;
 set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1291,7 +1292,6 @@ set_real_ip_from 2a0b:f4c2:1::140;
 set_real_ip_from 2a0b:f4c2:1::143;
 set_real_ip_from 2a0b:f4c2:1::144;
 set_real_ip_from 2a0b:f4c2:1::145;
-set_real_ip_from 2a0b:f4c2:1::146;
 set_real_ip_from 2a0b:f4c2:1::147;
 set_real_ip_from 2a0b:f4c2:1::149;
 set_real_ip_from 2a0b:f4c2:1::152;
@@ -1586,6 +1586,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
@@ -1719,6 +1720,7 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
