Update lists at 20251031-1801

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 102.211.56.20;
 allow 102.211.56.200;
 allow 103.109.101.105;
 allow 103.146.203.11;
+allow 103.164.54.199;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.20.241.102;
@@ -42,6 +43,7 @@ allow 107.174.146.25;
 allow 107.175.93.157;
 allow 107.189.10.175;
 allow 107.189.11.111;
+allow 107.189.1.16;
 allow 107.189.1.160;
 allow 107.189.1.175;
 allow 107.189.12.3;
@@ -146,6 +148,7 @@ allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.53.58.161;
 allow 154.65.97.191;
+allow 154.90.54.69;
 allow 160.119.249.240;
 allow 160.187.148.71;
 allow 161.129.68.162;
@@ -589,7 +592,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.69.116;
-allow 198.167.206.196;
+allow 198.167.206.179;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -919,6 +922,7 @@ allow 2400:d320:2261:6860::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
 allow 2.56.10.36;
@@ -1213,7 +1217,6 @@ allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1226,7 +1229,6 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:9b85:500::58;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:112:31::1;
-allow 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
@@ -1721,7 +1723,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1809,7 +1810,6 @@ allow 82.221.131.71;
 allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.29.128.145;
-allow 82.96.141.198;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
