--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -262,38 +262,6 @@ allow 2620:18c:0:192::e0:158;
 allow 2620:18c:0:192::e0:159;
 allow 2620:18c:0:192::e0:160;
 allow 2620:18c:0:192::e0:161;
-allow 2620:18c:0:192::e0:162;
-allow 2620:18c:0:192::e0:163;
-allow 2620:18c:0:192::e0:164;
-allow 2620:18c:0:192::e0:165;
-allow 2620:18c:0:192::e0:166;
-allow 2620:18c:0:192::e0:167;
-allow 2620:18c:0:192::e0:168;
-allow 2620:18c:0:192::e0:169;
-allow 2620:18c:0:192::e0:170;
-allow 2620:18c:0:192::e0:171;
-allow 2620:18c:0:192::e0:172;
-allow 2620:18c:0:192::e0:173;
-allow 2620:18c:0:192::e0:174;
-allow 2620:18c:0:192::e0:175;
-allow 2620:18c:0:192::e0:176;
-allow 2620:18c:0:192::e0:177;
-allow 2620:18c:0:192::e0:178;
-allow 2620:18c:0:192::e0:179;
-allow 2620:18c:0:192::e0:180;
-allow 2620:18c:0:192::e0:181;
-allow 2620:18c:0:192::e0:182;
-allow 2620:18c:0:192::e0:183;
-allow 2620:18c:0:192::e0:184;
-allow 2620:18c:0:192::e0:185;
-allow 2620:18c:0:192::e0:186;
-allow 2620:18c:0:192::e0:187;
-allow 2620:18c:0:192::e0:188;
-allow 2620:18c:0:192::e0:189;
-allow 2620:18c:0:192::e0:190;
-allow 2620:18c:0:192::e0:191;
-allow 2620:18c:0:192::e0:192;
-allow 2620:18c:0:192::e0:193;
 allow 2620:18c:0:192::e0:194;
 allow 2620:18c:0:192::e0:195;
 allow 2620:18c:0:192::e0:196;
@@ -353,6 +321,7 @@ allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -376,7 +345,6 @@ allow 2a03:4000:28:1e8::69;
 allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
-allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -498,7 +466,6 @@ allow 2a0b:f4c2:1::163;
 allow 2a0b:f4c2:1::164;
 allow 2a0b:f4c2:1::165;
 allow 2a0b:f4c2:1::166;
-allow 2a0b:f4c2:1::167;
 allow 2a0b:f4c2:1::169;
 allow 2a0b:f4c2:1::170;
 allow 2a0b:f4c2:1::172;
@@ -676,7 +643,6 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
@@ -714,7 +680,6 @@ allow 2a12:a800:2:1:45:138:16:42;
 allow 2a12:a800:2:1:45:138:16:69;
 allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
-allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
