--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -196,6 +196,7 @@ set_real_ip_from 173.224.219.44;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.134.4;
 set_real_ip_from 176.65.148.133;
@@ -359,7 +360,6 @@ set_real_ip_from 185.220.101.163;
 set_real_ip_from 185.220.101.164;
 set_real_ip_from 185.220.101.165;
 set_real_ip_from 185.220.101.166;
-set_real_ip_from 185.220.101.167;
 set_real_ip_from 185.220.101.169;
 set_real_ip_from 185.220.101.17;
 set_real_ip_from 185.220.101.170;
@@ -577,7 +577,6 @@ set_real_ip_from 194.53.137.102;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.55.165.11;
 set_real_ip_from 194.55.167.14;
-set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.246.231.197;
@@ -805,38 +804,6 @@ set_real_ip_from 23.129.64.158;
 set_real_ip_from 23.129.64.159;
 set_real_ip_from 23.129.64.160;
 set_real_ip_from 23.129.64.161;
-set_real_ip_from 23.129.64.162;
-set_real_ip_from 23.129.64.163;
-set_real_ip_from 23.129.64.164;
-set_real_ip_from 23.129.64.165;
-set_real_ip_from 23.129.64.166;
-set_real_ip_from 23.129.64.167;
-set_real_ip_from 23.129.64.168;
-set_real_ip_from 23.129.64.169;
-set_real_ip_from 23.129.64.170;
-set_real_ip_from 23.129.64.171;
-set_real_ip_from 23.129.64.172;
-set_real_ip_from 23.129.64.173;
-set_real_ip_from 23.129.64.174;
-set_real_ip_from 23.129.64.175;
-set_real_ip_from 23.129.64.176;
-set_real_ip_from 23.129.64.177;
-set_real_ip_from 23.129.64.178;
-set_real_ip_from 23.129.64.179;
-set_real_ip_from 23.129.64.180;
-set_real_ip_from 23.129.64.181;
-set_real_ip_from 23.129.64.182;
-set_real_ip_from 23.129.64.183;
-set_real_ip_from 23.129.64.184;
-set_real_ip_from 23.129.64.185;
-set_real_ip_from 23.129.64.186;
-set_real_ip_from 23.129.64.187;
-set_real_ip_from 23.129.64.188;
-set_real_ip_from 23.129.64.189;
-set_real_ip_from 23.129.64.190;
-set_real_ip_from 23.129.64.191;
-set_real_ip_from 23.129.64.192;
-set_real_ip_from 23.129.64.193;
 set_real_ip_from 23.129.64.194;
 set_real_ip_from 23.129.64.195;
 set_real_ip_from 23.129.64.196;
@@ -1071,38 +1038,6 @@ set_real_ip_from 2620:18c:0:192::e0:158;
 set_real_ip_from 2620:18c:0:192::e0:159;
 set_real_ip_from 2620:18c:0:192::e0:160;
 set_real_ip_from 2620:18c:0:192::e0:161;
-set_real_ip_from 2620:18c:0:192::e0:162;
-set_real_ip_from 2620:18c:0:192::e0:163;
-set_real_ip_from 2620:18c:0:192::e0:164;
-set_real_ip_from 2620:18c:0:192::e0:165;
-set_real_ip_from 2620:18c:0:192::e0:166;
-set_real_ip_from 2620:18c:0:192::e0:167;
-set_real_ip_from 2620:18c:0:192::e0:168;
-set_real_ip_from 2620:18c:0:192::e0:169;
-set_real_ip_from 2620:18c:0:192::e0:170;
-set_real_ip_from 2620:18c:0:192::e0:171;
-set_real_ip_from 2620:18c:0:192::e0:172;
-set_real_ip_from 2620:18c:0:192::e0:173;
-set_real_ip_from 2620:18c:0:192::e0:174;
-set_real_ip_from 2620:18c:0:192::e0:175;
-set_real_ip_from 2620:18c:0:192::e0:176;
-set_real_ip_from 2620:18c:0:192::e0:177;
-set_real_ip_from 2620:18c:0:192::e0:178;
-set_real_ip_from 2620:18c:0:192::e0:179;
-set_real_ip_from 2620:18c:0:192::e0:180;
-set_real_ip_from 2620:18c:0:192::e0:181;
-set_real_ip_from 2620:18c:0:192::e0:182;
-set_real_ip_from 2620:18c:0:192::e0:183;
-set_real_ip_from 2620:18c:0:192::e0:184;
-set_real_ip_from 2620:18c:0:192::e0:185;
-set_real_ip_from 2620:18c:0:192::e0:186;
-set_real_ip_from 2620:18c:0:192::e0:187;
-set_real_ip_from 2620:18c:0:192::e0:188;
-set_real_ip_from 2620:18c:0:192::e0:189;
-set_real_ip_from 2620:18c:0:192::e0:190;
-set_real_ip_from 2620:18c:0:192::e0:191;
-set_real_ip_from 2620:18c:0:192::e0:192;
-set_real_ip_from 2620:18c:0:192::e0:193;
 set_real_ip_from 2620:18c:0:192::e0:194;
 set_real_ip_from 2620:18c:0:192::e0:195;
 set_real_ip_from 2620:18c:0:192::e0:196;
@@ -1163,6 +1098,7 @@ set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1186,7 +1122,6 @@ set_real_ip_from 2a03:4000:28:1e8::69;
 set_real_ip_from 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 set_real_ip_from 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:37:3:e842:2ff:feb9:c49c;
-set_real_ip_from 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 set_real_ip_from 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 set_real_ip_from 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 set_real_ip_from 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -1308,7 +1243,6 @@ set_real_ip_from 2a0b:f4c2:1::163;
 set_real_ip_from 2a0b:f4c2:1::164;
 set_real_ip_from 2a0b:f4c2:1::165;
 set_real_ip_from 2a0b:f4c2:1::166;
-set_real_ip_from 2a0b:f4c2:1::167;
 set_real_ip_from 2a0b:f4c2:1::169;
 set_real_ip_from 2a0b:f4c2:1::170;
 set_real_ip_from 2a0b:f4c2:1::172;
@@ -1486,7 +1420,6 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
-set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:114;
 set_real_ip_from 2a12:a800:11:1:124:198:131:191;
@@ -1524,7 +1457,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:69;
 set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
-set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
@@ -1625,7 +1557,6 @@ set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.69;
 set_real_ip_from 45.138.16.76;
 set_real_ip_from 45.141.215.110;
-set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
 set_real_ip_from 45.141.215.169;
 set_real_ip_from 45.141.215.17;
@@ -1662,7 +1593,6 @@ set_real_ip_from 45.80.158.53;
 set_real_ip_from 45.80.158.75;
 set_real_ip_from 45.80.158.93;
 set_real_ip_from 45.80.208.224;
-set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.83.31.79;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.128;
