Update lists at 20251101-0901

--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -801,6 +801,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -834,6 +835,8 @@ allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.164;
 allow 45.138.16.222;
+allow 45.138.16.230;
+allow 45.138.16.231;
 allow 45.138.16.239;
 allow 45.138.16.240;
 allow 45.138.16.248;
@@ -841,12 +844,14 @@ allow 45.138.16.42;
 allow 45.138.16.69;
 allow 45.138.16.76;
 allow 45.141.215.110;
+allow 45.141.215.111;
 allow 45.141.215.114;
 allow 45.141.215.169;
 allow 45.141.215.17;
 allow 45.141.215.19;
 allow 45.141.215.200;
 allow 45.141.215.238;
+allow 45.141.215.28;
 allow 45.141.215.40;
 allow 45.141.215.56;
 allow 45.141.215.61;
@@ -877,6 +882,7 @@ allow 45.80.158.53;
 allow 45.80.158.75;
 allow 45.80.158.93;
 allow 45.80.208.224;
+allow 45.83.104.137;
 allow 45.83.31.79;
 allow 45.84.107.101;
 allow 45.84.107.128;
