--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -801,6 +801,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
@@ -834,6 +835,8 @@ set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.164;
 set_real_ip_from 45.138.16.222;
+set_real_ip_from 45.138.16.230;
+set_real_ip_from 45.138.16.231;
 set_real_ip_from 45.138.16.239;
 set_real_ip_from 45.138.16.240;
 set_real_ip_from 45.138.16.248;
@@ -841,12 +844,14 @@ set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.69;
 set_real_ip_from 45.138.16.76;
 set_real_ip_from 45.141.215.110;
+set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
 set_real_ip_from 45.141.215.169;
 set_real_ip_from 45.141.215.17;
 set_real_ip_from 45.141.215.19;
 set_real_ip_from 45.141.215.200;
 set_real_ip_from 45.141.215.238;
+set_real_ip_from 45.141.215.28;
 set_real_ip_from 45.141.215.40;
 set_real_ip_from 45.141.215.56;
 set_real_ip_from 45.141.215.61;
@@ -877,6 +882,7 @@ set_real_ip_from 45.80.158.53;
 set_real_ip_from 45.80.158.75;
 set_real_ip_from 45.80.158.93;
 set_real_ip_from 45.80.208.224;
+set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.83.31.79;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.128;
