--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -131,6 +131,7 @@ set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
+set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
@@ -345,6 +346,7 @@ set_real_ip_from 2a03:4000:28:1e8::69;
 set_real_ip_from 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 set_real_ip_from 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:37:3:e842:2ff:feb9:c49c;
+set_real_ip_from 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 set_real_ip_from 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 set_real_ip_from 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 set_real_ip_from 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -679,6 +681,8 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:107;
 set_real_ip_from 2a12:a800:2:1:45:138:16:113;
 set_real_ip_from 2a12:a800:2:1:45:138:16:164;
 set_real_ip_from 2a12:a800:2:1:45:138:16:222;
+set_real_ip_from 2a12:a800:2:1:45:138:16:230;
+set_real_ip_from 2a12:a800:2:1:45:138:16:231;
 set_real_ip_from 2a12:a800:2:1:45:138:16:239;
 set_real_ip_from 2a12:a800:2:1:45:138:16:240;
 set_real_ip_from 2a12:a800:2:1:45:138:16:248;
@@ -686,12 +690,14 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:69;
 set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
+set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
 set_real_ip_from 2a12:a800:2:1:45:141:215:19;
 set_real_ip_from 2a12:a800:2:1:45:141:215:200;
 set_real_ip_from 2a12:a800:2:1:45:141:215:238;
+set_real_ip_from 2a12:a800:2:1:45:141:215:28;
 set_real_ip_from 2a12:a800:2:1:45:141:215:40;
 set_real_ip_from 2a12:a800:2:1:45:141:215:56;
 set_real_ip_from 2a12:a800:2:1:45:141:215:61;
