--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -146,6 +146,7 @@ allow 154.26.159.157;
 allow 154.53.58.161;
 allow 154.65.97.191;
 allow 154.90.54.69;
+allow 157.90.92.35;
 allow 160.119.249.240;
 allow 160.187.148.71;
 allow 161.129.68.162;
@@ -908,6 +909,7 @@ allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
+allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
 allow 2602:f6f6:2:a27::5;
@@ -1543,6 +1545,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.135.25.97;
 allow 38.60.216.74;
 allow 38.97.116.242;
 allow 38.97.116.243;
@@ -1752,6 +1755,7 @@ allow 81.16.33.42;
 allow 81.17.28.95;
 allow 81.181.104.22;
 allow 82.118.248.205;
+allow 82.153.138.125;
 allow 82.153.138.184;
 allow 82.153.138.241;
 allow 82.153.138.7;
