--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -146,6 +146,7 @@ deny 154.26.159.157;
 deny 154.53.58.161;
 deny 154.65.97.191;
 deny 154.90.54.69;
+deny 157.90.92.35;
 deny 160.119.249.240;
 deny 160.187.148.71;
 deny 161.129.68.162;
@@ -908,6 +909,7 @@ deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
+deny 2602:f6f6:2:39c1::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
 deny 2602:f6f6:2:a27::5;
@@ -1543,6 +1545,7 @@ deny 38.135.25.142;
 deny 38.135.25.143;
 deny 38.135.25.144;
 deny 38.135.25.2;
+deny 38.135.25.97;
 deny 38.60.216.74;
 deny 38.97.116.242;
 deny 38.97.116.243;
@@ -1752,6 +1755,7 @@ deny 81.16.33.42;
 deny 81.17.28.95;
 deny 81.181.104.22;
 deny 82.118.248.205;
+deny 82.153.138.125;
 deny 82.153.138.184;
 deny 82.153.138.241;
 deny 82.153.138.7;
