--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -146,6 +146,7 @@ allow 154.26.159.157;
 allow 154.53.58.161;
 allow 154.65.97.191;
 allow 154.90.54.69;
+allow 157.90.92.35;
 allow 160.119.249.240;
 allow 160.187.148.71;
 allow 161.129.68.162;
@@ -198,7 +199,6 @@ allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.148.133;
 allow 176.65.148.3;
-allow 176.65.149.100;
 allow 176.65.149.105;
 allow 176.65.149.87;
 allow 176.65.149.88;
@@ -577,6 +577,7 @@ allow 194.53.137.102;
 allow 194.53.137.156;
 allow 194.55.165.11;
 allow 194.55.167.14;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -858,7 +859,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -909,7 +909,6 @@ allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1170,7 +1169,6 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
-allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1700:0:12::1;
@@ -1429,6 +1427,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
@@ -1530,7 +1529,6 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
