--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -146,6 +146,7 @@ deny 154.26.159.157;
 deny 154.53.58.161;
 deny 154.65.97.191;
 deny 154.90.54.69;
+deny 157.90.92.35;
 deny 160.119.249.240;
 deny 160.187.148.71;
 deny 161.129.68.162;
@@ -198,7 +199,6 @@ deny 176.58.89.182;
 deny 176.65.134.4;
 deny 176.65.148.133;
 deny 176.65.148.3;
-deny 176.65.149.100;
 deny 176.65.149.105;
 deny 176.65.149.87;
 deny 176.65.149.88;
@@ -577,6 +577,7 @@ deny 194.53.137.102;
 deny 194.53.137.156;
 deny 194.55.165.11;
 deny 194.55.167.14;
+deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.246.231.197;
@@ -858,7 +859,6 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
-deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -909,7 +909,6 @@ deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:39c1::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
-deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1170,7 +1169,6 @@ deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:112:31::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
-deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a06:1700:0:12::1;
@@ -1429,6 +1427,7 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
+deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:114;
 deny 2a12:a800:11:1:124:198:131:191;
@@ -1530,7 +1529,6 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
-deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
