--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,10 +6,12 @@ allow 102.211.56.200;
 allow 103.109.101.105;
 allow 103.146.203.11;
 allow 103.164.54.199;
+allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.20.241.102;
 allow 103.251.167.10;
 allow 103.253.24.18;
+allow 103.28.52.93;
 allow 103.91.65.44;
 allow 104.167.241.4;
 allow 104.167.242.117;
@@ -40,6 +42,7 @@ allow 107.174.146.25;
 allow 107.175.93.157;
 allow 107.189.10.175;
 allow 107.189.11.111;
+allow 107.189.1.16;
 allow 107.189.1.160;
 allow 107.189.1.175;
 allow 107.189.12.3;
@@ -50,6 +53,7 @@ allow 107.189.13.254;
 allow 107.189.14.4;
 allow 107.189.14.43;
 allow 107.189.1.9;
+allow 107.189.2.108;
 allow 107.189.27.145;
 allow 107.189.29.184;
 allow 107.189.30.236;
@@ -122,6 +126,7 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
+allow 141.98.11.62;
 allow 143.20.64.235;
 allow 144.126.133.74;
 allow 144.31.188.82;
@@ -190,6 +195,7 @@ allow 173.224.219.44;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
+allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.148.133;
@@ -379,8 +385,6 @@ allow 185.220.101.22;
 allow 185.220.101.23;
 allow 185.220.101.24;
 allow 185.220.101.25;
-allow 185.220.101.26;
-allow 185.220.101.27;
 allow 185.220.101.28;
 allow 185.220.101.29;
 allow 185.220.101.3;
@@ -718,6 +722,7 @@ allow 2001:b011:4006:f9a1::b;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
+allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 202.61.253.243;
 allow 203.55.81.1;
 allow 203.55.81.2;
@@ -764,7 +769,6 @@ allow 213.111.150.96;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
-allow 216.9.224.232;
 allow 217.12.221.131;
 allow 217.182.75.199;
 allow 220.135.36.173;
@@ -1095,6 +1099,7 @@ allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1160,7 +1165,6 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9b85:500::58;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
@@ -1299,12 +1303,10 @@ allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
 allow 2a0b:f4c2:2::58;
 allow 2a0b:f4c2:2::59;
-allow 2a0b:f4c2::26;
 allow 2a0b:f4c2:2::60;
 allow 2a0b:f4c2:2::61;
 allow 2a0b:f4c2:2::62;
 allow 2a0b:f4c2:2::63;
-allow 2a0b:f4c2::27;
 allow 2a0b:f4c2::28;
 allow 2a0b:f4c2::29;
 allow 2a0b:f4c2::3;
@@ -1731,6 +1733,7 @@ allow 77.48.28.204;
 allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
+allow 77.90.8.65;
 allow 78.142.18.219;
 allow 78.159.131.103;
 allow 79.100.12.71;
@@ -1746,6 +1749,9 @@ allow 81.16.33.42;
 allow 81.17.28.95;
 allow 81.181.104.22;
 allow 82.118.248.205;
+allow 82.153.138.184;
+allow 82.153.138.241;
+allow 82.153.138.7;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
@@ -1755,7 +1761,6 @@ allow 82.221.139.190;
 allow 82.29.128.145;
 allow 83.217.9.73;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.239.46.144;
@@ -1833,5 +1838,6 @@ allow 95.128.43.164;
 allow 95.143.193.125;
 allow 95.211.174.137;
 allow 95.211.244.28;
+allow 96.8.119.172;
 allow 97.90.239.170;
 allow 98.128.173.33;
