--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -6,10 +6,12 @@ deny 102.211.56.200;
 deny 103.109.101.105;
 deny 103.146.203.11;
 deny 103.164.54.199;
+deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.20.241.102;
 deny 103.251.167.10;
 deny 103.253.24.18;
+deny 103.28.52.93;
 deny 103.91.65.44;
 deny 104.167.241.4;
 deny 104.167.242.117;
@@ -40,6 +42,7 @@ deny 107.174.146.25;
 deny 107.175.93.157;
 deny 107.189.10.175;
 deny 107.189.11.111;
+deny 107.189.1.16;
 deny 107.189.1.160;
 deny 107.189.1.175;
 deny 107.189.12.3;
@@ -50,6 +53,7 @@ deny 107.189.13.254;
 deny 107.189.14.4;
 deny 107.189.14.43;
 deny 107.189.1.9;
+deny 107.189.2.108;
 deny 107.189.27.145;
 deny 107.189.29.184;
 deny 107.189.30.236;
@@ -122,6 +126,7 @@ deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.99.172.11;
 deny 139.99.8.57;
+deny 141.98.11.62;
 deny 143.20.64.235;
 deny 144.126.133.74;
 deny 144.31.188.82;
@@ -190,6 +195,7 @@ deny 173.224.219.44;
 deny 173.255.198.243;
 deny 176.118.193.33;
 deny 176.121.81.51;
+deny 176.58.121.177;
 deny 176.58.89.182;
 deny 176.65.134.4;
 deny 176.65.148.133;
@@ -379,8 +385,6 @@ deny 185.220.101.22;
 deny 185.220.101.23;
 deny 185.220.101.24;
 deny 185.220.101.25;
-deny 185.220.101.26;
-deny 185.220.101.27;
 deny 185.220.101.28;
 deny 185.220.101.29;
 deny 185.220.101.3;
@@ -718,6 +722,7 @@ deny 2001:b011:4006:f9a1::b;
 deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
+deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
 deny 202.61.253.243;
 deny 203.55.81.1;
 deny 203.55.81.2;
@@ -764,7 +769,6 @@ deny 213.111.150.96;
 deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
-deny 216.9.224.232;
 deny 217.12.221.131;
 deny 217.182.75.199;
 deny 220.135.36.173;
@@ -1095,6 +1099,7 @@ deny 2a01:270:9847::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
+deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1160,7 +1165,6 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:9b85:500::58;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:112:31::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
@@ -1299,12 +1303,10 @@ deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
-deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
 deny 2a0b:f4c2:2::62;
 deny 2a0b:f4c2:2::63;
-deny 2a0b:f4c2::27;
 deny 2a0b:f4c2::28;
 deny 2a0b:f4c2::29;
 deny 2a0b:f4c2::3;
@@ -1731,6 +1733,7 @@ deny 77.48.28.204;
 deny 77.48.28.237;
 deny 77.48.28.239;
 deny 77.81.247.72;
+deny 77.90.8.65;
 deny 78.142.18.219;
 deny 78.159.131.103;
 deny 79.100.12.71;
@@ -1746,6 +1749,9 @@ deny 81.16.33.42;
 deny 81.17.28.95;
 deny 81.181.104.22;
 deny 82.118.248.205;
+deny 82.153.138.184;
+deny 82.153.138.241;
+deny 82.153.138.7;
 deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
@@ -1755,7 +1761,6 @@ deny 82.221.139.190;
 deny 82.29.128.145;
 deny 83.217.9.73;
 deny 83.96.213.63;
-deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.239.46.144;
@@ -1833,5 +1838,6 @@ deny 95.128.43.164;
 deny 95.143.193.125;
 deny 95.211.174.137;
 deny 95.211.244.28;
+deny 96.8.119.172;
 deny 97.90.239.170;
 deny 98.128.173.33;
