--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -106,6 +106,7 @@ deny 2001:b011:4006:f9a1::b;
 deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
+deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
 deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2400:8901::f03c:95ff:fe89:4a88;
 deny 2400:8905::f03c:95ff:fe67:ec03;
@@ -320,6 +321,7 @@ deny 2a01:270:9847::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
+deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -385,7 +387,6 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:9b85:500::58;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:112:31::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
@@ -524,12 +525,10 @@ deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
-deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
 deny 2a0b:f4c2:2::62;
 deny 2a0b:f4c2:2::63;
-deny 2a0b:f4c2::27;
 deny 2a0b:f4c2::28;
 deny 2a0b:f4c2::29;
 deny 2a0b:f4c2::3;
