--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,10 +6,12 @@ set_real_ip_from 102.211.56.200;
 set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.146.203.11;
 set_real_ip_from 103.164.54.199;
+set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.20.241.102;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.253.24.18;
+set_real_ip_from 103.28.52.93;
 set_real_ip_from 103.91.65.44;
 set_real_ip_from 104.167.241.4;
 set_real_ip_from 104.167.242.117;
@@ -40,6 +42,7 @@ set_real_ip_from 107.174.146.25;
 set_real_ip_from 107.175.93.157;
 set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.11.111;
+set_real_ip_from 107.189.1.16;
 set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.12.3;
@@ -50,6 +53,7 @@ set_real_ip_from 107.189.13.254;
 set_real_ip_from 107.189.14.4;
 set_real_ip_from 107.189.14.43;
 set_real_ip_from 107.189.1.9;
+set_real_ip_from 107.189.2.108;
 set_real_ip_from 107.189.27.145;
 set_real_ip_from 107.189.29.184;
 set_real_ip_from 107.189.30.236;
@@ -122,6 +126,7 @@ set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
+set_real_ip_from 141.98.11.62;
 set_real_ip_from 143.20.64.235;
 set_real_ip_from 144.126.133.74;
 set_real_ip_from 144.31.188.82;
@@ -190,6 +195,7 @@ set_real_ip_from 173.224.219.44;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.134.4;
 set_real_ip_from 176.65.148.133;
@@ -379,8 +385,6 @@ set_real_ip_from 185.220.101.22;
 set_real_ip_from 185.220.101.23;
 set_real_ip_from 185.220.101.24;
 set_real_ip_from 185.220.101.25;
-set_real_ip_from 185.220.101.26;
-set_real_ip_from 185.220.101.27;
 set_real_ip_from 185.220.101.28;
 set_real_ip_from 185.220.101.29;
 set_real_ip_from 185.220.101.3;
@@ -718,6 +722,7 @@ set_real_ip_from 2001:b011:4006:f9a1::b;
 set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
+set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
 set_real_ip_from 202.61.253.243;
 set_real_ip_from 203.55.81.1;
 set_real_ip_from 203.55.81.2;
@@ -764,7 +769,6 @@ set_real_ip_from 213.111.150.96;
 set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
-set_real_ip_from 216.9.224.232;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.182.75.199;
 set_real_ip_from 220.135.36.173;
@@ -1095,6 +1099,7 @@ set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1160,7 +1165,6 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:9b85:500::58;
-set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
@@ -1299,12 +1303,10 @@ set_real_ip_from 2a0b:f4c2:2::56;
 set_real_ip_from 2a0b:f4c2:2::57;
 set_real_ip_from 2a0b:f4c2:2::58;
 set_real_ip_from 2a0b:f4c2:2::59;
-set_real_ip_from 2a0b:f4c2::26;
 set_real_ip_from 2a0b:f4c2:2::60;
 set_real_ip_from 2a0b:f4c2:2::61;
 set_real_ip_from 2a0b:f4c2:2::62;
 set_real_ip_from 2a0b:f4c2:2::63;
-set_real_ip_from 2a0b:f4c2::27;
 set_real_ip_from 2a0b:f4c2::28;
 set_real_ip_from 2a0b:f4c2::29;
 set_real_ip_from 2a0b:f4c2::3;
@@ -1731,6 +1733,7 @@ set_real_ip_from 77.48.28.204;
 set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
+set_real_ip_from 77.90.8.65;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 78.159.131.103;
 set_real_ip_from 79.100.12.71;
@@ -1746,6 +1749,9 @@ set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 81.181.104.22;
 set_real_ip_from 82.118.248.205;
+set_real_ip_from 82.153.138.184;
+set_real_ip_from 82.153.138.241;
+set_real_ip_from 82.153.138.7;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
@@ -1755,7 +1761,6 @@ set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.29.128.145;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
-set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.239.46.144;
@@ -1833,5 +1838,6 @@ set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.211.174.137;
 set_real_ip_from 95.211.244.28;
+set_real_ip_from 96.8.119.172;
 set_real_ip_from 97.90.239.170;
 set_real_ip_from 98.128.173.33;
