Update lists at 20251104-2101

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -234,7 +234,6 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 18.119.162.10;
 allow 184.75.221.107;
 allow 185.100.85.132;
 allow 185.100.85.24;
@@ -271,6 +270,7 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.129.62.64;
 allow 185.130.47.58;
+allow 185.132.53.107;
 allow 185.132.53.150;
 allow 185.132.53.188;
 allow 185.132.53.88;
@@ -1002,7 +1002,6 @@ allow 2605:a142:2263:1906::1;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::35c5;
 allow 2607:5300:203:b45b::;
-allow 2607:5300:205:200::4894;
 allow 2607:f530:9002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2610:150:4001:a120:216:3cff:fe4a:e2a9;
@@ -1505,6 +1504,7 @@ allow 2a14:7583:f607::;
 allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:20::a;
 allow 2a14:c380:50:60::a;
+allow 2a14:c380:50:62::a;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.133.0.235;
@@ -1650,7 +1650,6 @@ allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
 allow 45.95.233.104;
-allow 46.165.193.216;
 allow 46.165.243.36;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1663,7 +1662,6 @@ allow 5.104.84.183;
 allow 5.104.86.6;
 allow 51.15.15.12;
 allow 51.15.59.15;
-allow 51.222.142.67;
 allow 51.38.225.46;
 allow 51.68.226.107;
 allow 51.81.222.62;
