--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -225,7 +225,6 @@ allow 2605:a142:2263:1906::1;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::35c5;
 allow 2607:5300:203:b45b::;
-allow 2607:5300:205:200::4894;
 allow 2607:f530:9002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2610:150:4001:a120:216:3cff:fe4a:e2a9;
@@ -727,3 +726,4 @@ allow 2a14:7583:f607::;
 allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:20::a;
 allow 2a14:c380:50:60::a;
+allow 2a14:c380:50:62::a;
