--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -225,7 +225,6 @@ deny 2605:a142:2263:1906::1;
 deny 2605:aa80:0:9::3;
 deny 2607:5300:201:3100::35c5;
 deny 2607:5300:203:b45b::;
-deny 2607:5300:205:200::4894;
 deny 2607:f530:9002::19;
 deny 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 deny 2610:150:4001:a120:216:3cff:fe4a:e2a9;
@@ -727,3 +726,4 @@ deny 2a14:7583:f607::;
 deny 2a14:c380:280:77::a;
 deny 2a14:c380:50:20::a;
 deny 2a14:c380:50:60::a;
+deny 2a14:c380:50:62::a;
