Update lists at 20251105-0601

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -137,6 +137,7 @@ set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 152.32.206.127;
 set_real_ip_from 152.53.106.19;
+set_real_ip_from 152.53.150.12;
 set_real_ip_from 152.53.184.161;
 set_real_ip_from 152.53.210.165;
 set_real_ip_from 152.53.48.80;
@@ -908,6 +909,7 @@ set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:39c1::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
+set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
@@ -1077,6 +1079,7 @@ set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2803:200:ffff:ff0c::ae92:2a2f;
 set_real_ip_from 2803:6d90:111::67;
 set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
+set_real_ip_from 2a00:11c0:47:1e7e::;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
@@ -1529,6 +1532,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
@@ -1777,8 +1781,10 @@ set_real_ip_from 87.118.116.12;
 set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
+set_real_ip_from 87.120.222.33;
 set_real_ip_from 87.120.254.132;
 set_real_ip_from 87.121.79.55;
+set_real_ip_from 88.151.192.2;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
