--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -137,6 +137,7 @@ allow 149.202.79.129;
 allow 149.56.44.47;
 allow 152.32.206.127;
 allow 152.53.106.19;
+allow 152.53.150.12;
 allow 152.53.184.161;
 allow 152.53.210.165;
 allow 152.53.48.80;
@@ -908,6 +909,7 @@ allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1077,6 +1079,7 @@ allow 2800:ba0:6:c1::4858;
 allow 2803:200:ffff:ff0c::ae92:2a2f;
 allow 2803:6d90:111::67;
 allow 2803:cd80:2000:10::db8f:5f60;
+allow 2a00:11c0:47:1e7e::;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
@@ -1529,6 +1532,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1777,8 +1781,10 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.222.33;
 allow 87.120.254.132;
 allow 87.121.79.55;
+allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
