--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -137,6 +137,7 @@ allow 149.202.79.129;
 allow 149.56.44.47;
 allow 152.32.206.127;
 allow 152.53.106.19;
+allow 152.53.150.12;
 allow 152.53.184.161;
 allow 152.53.210.165;
 allow 152.53.48.80;
@@ -800,6 +801,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1048,8 +1050,10 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.222.33;
 allow 87.120.254.132;
 allow 87.121.79.55;
+allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
