--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -137,6 +137,7 @@ deny 149.202.79.129;
 deny 149.56.44.47;
 deny 152.32.206.127;
 deny 152.53.106.19;
+deny 152.53.150.12;
 deny 152.53.184.161;
 deny 152.53.210.165;
 deny 152.53.48.80;
@@ -908,6 +909,7 @@ deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:39c1::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1077,6 +1079,7 @@ deny 2800:ba0:6:c1::4858;
 deny 2803:200:ffff:ff0c::ae92:2a2f;
 deny 2803:6d90:111::67;
 deny 2803:cd80:2000:10::db8f:5f60;
+deny 2a00:11c0:47:1e7e::;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
@@ -1529,6 +1532,7 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
@@ -1777,8 +1781,10 @@ deny 87.118.116.12;
 deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
+deny 87.120.222.33;
 deny 87.120.254.132;
 deny 87.121.79.55;
+deny 88.151.192.2;
 deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
