Update lists at 20251105-0901

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -465,6 +465,7 @@ allow 185.254.196.141;
 allow 185.32.126.43;
 allow 185.34.33.2;
 allow 185.35.202.222;
+allow 185.40.4.10;
 allow 185.40.4.100;
 allow 185.40.4.101;
 allow 185.40.4.121;
@@ -909,7 +910,6 @@ allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1373,6 +1373,7 @@ allow 2a0d:c2c0:1:4::2;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:13:b6d5::1;
 allow 2a0e:1d80:17:6f8d::1;
+allow 2a0e:4005:1002:ffff:185:40:4:10;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
 allow 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1532,7 +1533,6 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
