--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -131,7 +131,6 @@ deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:39c1::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
-deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -594,6 +593,7 @@ deny 2a0d:c2c0:1:4::2;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:13:b6d5::1;
 deny 2a0e:1d80:17:6f8d::1;
+deny 2a0e:4005:1002:ffff:185:40:4:10;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
 deny 2a0e:4005:1002:ffff:185:40:4:127;
