Update lists at 20251106-0001

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -309,6 +309,7 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
+deny 2a00:1dc0:caff:13a::9d2c;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
