--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -206,6 +206,7 @@ allow 176.65.149.96;
 allow 176.97.114.202;
 allow 177.93.140.66;
 allow 178.17.170.144;
+allow 178.17.170.218;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -1087,6 +1088,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
+allow 2a00:1dc0:caff:13a::9d2c;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
@@ -1844,6 +1846,7 @@ allow 94.74.164.89;
 allow 94.74.182.134;
 allow 95.128.43.164;
 allow 95.143.193.125;
+allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 97.90.239.170;
