--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -206,6 +206,7 @@ set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.17.170.144;
+set_real_ip_from 178.17.170.218;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
@@ -1113,6 +1114,7 @@ set_real_ip_from 94.74.164.89;
 set_real_ip_from 94.74.182.134;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.143.193.125;
+set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.174.137;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 97.90.239.170;
