Update lists at 20251106-0901

--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -806,6 +806,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -852,6 +853,7 @@ allow 45.138.16.240;
 allow 45.138.16.248;
 allow 45.138.16.42;
 allow 45.138.16.69;
+allow 45.138.16.76;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
