--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -201,6 +201,7 @@ allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.121.177;
 allow 176.58.89.182;
+allow 176.65.132.187;
 allow 176.65.134.4;
 allow 176.65.148.133;
 allow 176.65.148.3;
@@ -281,6 +282,7 @@ allow 185.132.53.150;
 allow 185.132.53.188;
 allow 185.132.53.88;
 allow 185.138.88.25;
+allow 185.141.216.154;
 allow 185.150.28.13;
 allow 185.154.110.142;
 allow 185.154.110.17;
@@ -582,7 +584,6 @@ allow 194.53.137.102;
 allow 194.53.137.156;
 allow 194.55.165.11;
 allow 194.55.167.14;
-allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -771,7 +772,6 @@ allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
-allow 213.111.150.96;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
@@ -874,7 +874,6 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
@@ -1165,6 +1164,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1204,7 +1204,6 @@ allow 2a07:6d80:1e01:3a13::;
 allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
-allow 2a09:2dc2:0:5963::;
 allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
@@ -1439,7 +1438,6 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
@@ -1576,7 +1574,6 @@ allow 45.133.73.14;
 allow 45.133.73.63;
 allow 45.133.74.53;
 allow 45.134.225.36;
-allow 45.137.201.26;
 allow 45.137.201.31;
 allow 45.137.201.55;
 allow 45.137.70.158;
@@ -1687,6 +1684,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1714,7 +1712,6 @@ allow 52.62.107.28;
 allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
-allow 5.34.182.203;
 allow 54.36.101.21;
 allow 54.36.108.162;
 allow 5.45.102.93;
