--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -379,6 +379,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -418,7 +419,6 @@ deny 2a07:6d80:1e01:3a13::;
 deny 2a07:e03:2a::bcde;
 deny 2a07:e042:1:181::1;
 deny 2a07:e042:1:182::1;
-deny 2a09:2dc2:0:5963::;
 deny 2a09:61c0::20;
 deny 2a09:61c0::21;
 deny 2a09:61c0::22;
@@ -653,7 +653,6 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
-deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:114;
 deny 2a12:a800:11:1:124:198:131:191;
