Update lists at 20251107-0601

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -584,6 +584,7 @@ allow 194.53.137.102;
 allow 194.53.137.156;
 allow 194.55.165.11;
 allow 194.55.167.14;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -874,6 +875,7 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
@@ -916,7 +918,6 @@ allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1438,6 +1439,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
@@ -1543,7 +1545,6 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1574,6 +1575,7 @@ allow 45.133.73.14;
 allow 45.133.73.63;
 allow 45.133.74.53;
 allow 45.134.225.36;
+allow 45.137.201.26;
 allow 45.137.201.31;
 allow 45.137.201.55;
 allow 45.137.70.158;
@@ -1853,11 +1855,11 @@ allow 94.72.103.33;
 allow 94.72.104.135;
 allow 94.74.164.143;
 allow 94.74.164.89;
+allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
-allow 96.8.119.172;
 allow 97.90.239.170;
 allow 98.128.173.33;
