--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -584,6 +584,7 @@ set_real_ip_from 194.53.137.102;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.55.165.11;
 set_real_ip_from 194.55.167.14;
+set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.246.231.197;
@@ -874,6 +875,7 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
@@ -916,7 +918,6 @@ set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:39c1::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
-set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
@@ -1438,6 +1439,7 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
+set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:114;
 set_real_ip_from 2a12:a800:11:1:124:198:131:191;
@@ -1543,7 +1545,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
@@ -1574,6 +1575,7 @@ set_real_ip_from 45.133.73.14;
 set_real_ip_from 45.133.73.63;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.137.201.26;
 set_real_ip_from 45.137.201.31;
 set_real_ip_from 45.137.201.55;
 set_real_ip_from 45.137.70.158;
@@ -1853,11 +1855,11 @@ set_real_ip_from 94.72.103.33;
 set_real_ip_from 94.72.104.135;
 set_real_ip_from 94.74.164.143;
 set_real_ip_from 94.74.164.89;
+set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.174.137;
 set_real_ip_from 95.211.244.28;
-set_real_ip_from 96.8.119.172;
 set_real_ip_from 97.90.239.170;
 set_real_ip_from 98.128.173.33;
